# imap-copy

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.example.toml
include/: app_types.h  cache.h  client.h  config.h  imap_client.h  transfer.h  types.h
scripts/: deploy.sh  docker-linux.sh
src/: cache.cpp  client.cpp  config.cpp  imap_client.cpp  main.cpp  transfer.cpp
